--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -4,10 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-	<ListView
+	<LinearLayout
+		android:orientation="vertical"
 		android:minWidth="25px"
 		android:minHeight="25px"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:id="@+id/listViewProvince" />
+		android:id="@+id/linearLayout1"
+		android:layout_margin="10px"
+		>
+		<Button
+			android:text="เลือกจังหวัด"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/buttonSelectProvince" />
+	</LinearLayout>
+	
 </RelativeLayout>
